modules/security/rules.tf
resource "aws_security_group_rule" "sqs_inbound_sign_lambda" {
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.sg_sqs_vpce.id
  source_security_group_id = aws_security_group.sg_sign_lambda.id
}

resource "aws_security_group_rule" "sqs_inbound_crop_lambda" {
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.sg_sqs_vpce.id
  source_security_group_id = aws_security_group.sg_crop_lambda.id
}

resource "aws_security_group_rule" "sign_lambda_outbound" {
  type                     = "egress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.sg_sign_lambda.id
  source_security_group_id = aws_security_group.sg_sqs_vpce.id
}

resource "aws_security_group_rule" "crop_lambda_outbound" {
  type                     = "egress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.sg_crop_lambda.id
  source_security_group_id = aws_security_group.sg_sqs_vpce.id
}

resource "aws_security_group_rule" "crop_lambda_outbound_s3" {
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.sg_crop_lambda.id
  prefix_list_ids   = [data.aws_prefix_list.s3.id]
}
